--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint",
-    "ts-node": "ts-node -P ./ts-node/tsconfig.json --files ./ts-node/src/index.ts",
-    "tsc-node": "tsc -P ./ts-node/tsconfig.json"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
